--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,8 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 
-  <link href="/assets/css/style.css" rel="stylesheet" />
-  <link href="/assets/css/colors-dark.css" rel="stylesheet" />
+  <link href="http://mdwriterapp.com/blog/assets/css/style.css" rel="stylesheet" />
+  <link href="http://mdwriterapp.com/blog/assets/css/colors-dark.css" rel="stylesheet" />
 
 </head>
 
@@ -20,7 +20,7 @@
 
 
   <header id="header">
-    <h1><a href="/"><i class="icon-sun"></i> {{ site.name }}</a></h1>
+    <h1><a href="/blog"><i class="icon-sun"></i> {{ site.name }}</a></h1>
     <p>{{ site.description }}</p>
   </header>
 
@@ -33,11 +33,12 @@
     <div id="sidebar">
       <nav>
         <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/archives">Archive</a></li>
-          <li><a href="/about">About</a></li>
-          <li><a href="http://twitter.com/redwall_hp">Twitter</a></li>
-          <li><a href="/feed.xml">RSS Feed</a></li>
+          <li><a href="/">App</a></li>
+          <li><a href="/blog">Blog</a></li>
+          <li><a href="/blog/archives">Archive</a></li>
+          <li><a href="/blog/about">About</a></li>
+          <li><a href="http://twitter.com/dcab">Twitter</a></li>
+          <li><a href="/blog/feed.xml">RSS Feed</a></li>
         </ul>
       </nav>
     </div>
